# connman-adapter

./: CMakeLists.txt  README.md  connman-adapter.pro  connman-adapter.upstart
files/launch/: connman-adapter.in
files/sysbus/: net.connman.json.pub  net.connman.service.prv
service/: com.palm.wifi.json.pub  com.palm.wifi.service.pub
src/: commondbustypes.h  connectionsettings.h  connmanagent.cpp  connmanagent.h  connmanmanager.cpp  connmanmanager.h  main.cpp  networkmanager.cpp  networkmanager.h  servicemgr.cpp  servicemgr.h  serviceprofile.h  servicerequest.h  utilities.cpp  utilities.h  wifiservice.cpp  wifiservice.h
